 - Thanks to Hashim Kubba for this patch (ID 2104309)

Graph Plugin:
 - Show constraint name can be selected on each constraint separately. See right mouse menu on constraint 
   line.
 - Allowed constraints to be created using drag and drop.
   To create such a non-DB constraint using drag and drop hold
   down the control key. Then right click the constraint to configure it.  


Bug-Fixes:

Loading and saving files on Windows produced multiple CR (carriage return) chars in files.
When copy and paste was used on such files multiple empty lines were created.
Note: The Windows standard editor Notepad shows multiple CR chars where they exist and allows to remove them.
      SQuirreL does not remove them automatically at any place.



Moved focus to SQL Editor when it gets visible through previous Session / next Session navigation (Alt left/right)

Fixed class not found exception in Oracle Plugin when setting Session Time Zone.
Thanks to Neville Rowe

2946165: preferences messages not translatable
2946160: translation missing in refactoring
2944128: remote not translatable
2879711: Fix for Excel date export concerning dates earlier than 1900-03-01.
 		 Thanks to mironsadziak for the patch (Patch ID 2905218)
2853329: Ctrl-S overwrites existing file on 2nd try
2819161:  squirrel-sql.sh in plain zip had an errant apostrophe.  Tested this fix on MacOS 10 and Ubuntu 9.04.  
         Thanks to Jonathan James for vetting the anonymously submitted patch.
2818117 ("Make Editable" uses column label instead of name)
		 Thanks to Christian Gruenberg for the patch (Patch ID 2924887)
2801011: Sybase (CREATE TABLE script generate decimal(15,2) instead of (15,4))
2794860: Sybase (CREATE TABLE script generate numeric(15) instead (15,2))
2754166: SQLScript plugin loses precision for Timestamp in H2
2746982: Error occured in IPlugin.sessionEnded() for SQL Parametrisation
2713952: Create table script (on Sybase): Always generate "datetime" type for "date" (and datetime)